src/app/shared/ui/forms/subtask-input-group/subtask-input-group.scss
@use 'styles/variables' as *;
@use 'styles/mixins' as mixins;

fieldset {
  border: none;
  margin: 0;
  padding: 0;
}

ul.subtask-list {
  list-style: none;
  max-height: calc(3.5 * 2.25rem);
  overflow-y: auto;
  padding-left: 0;

  li {
    display: flex;
    align-items: center;
    padding-left: 0.5rem;

    &::before {
      content: '\2022';
      margin-right: 0.5rem;
      flex-shrink: 0;
    }

    > * {
      flex: 1;
    }

    &:hover:not(:has(.input-group)) {
      background-color: $grey-light;
      border-radius: 8px;
      cursor: pointer;
    }

    .btn-link,
    .vr {
      opacity: 0;
      transition: opacity 0.2s;
    }

    &:hover .btn-link,
    &:hover .vr {
      opacity: 1;
    }

    .btn{
      z-index: 3;
      &:hover{
        &:after{
          content: "";
          position: absolute;
          background-color: $grey-light;
          border-radius: 100%;
          width: 1.5rem;
          height: 1.5rem;
          z-index: -1;
          left: 50%;
          top: 50%;
          transform: translate(-50%, -50%);
        }
      }
    }
  }
}

.vr {
  height: 60%;
  align-self: center;
  width: 0.02rem;
  opacity: 0.5;
}

.input-group-sm {
  input.form-control,
  .btn {
    height: 1.875rem;
    padding-block: 0.15rem;
  }

  input.form-control {
    border: none;
    border-bottom: 0.0625rem solid $blue-light;
    border-radius: 0;

    &:hover,
    &:focus {
      box-shadow: none;
      border-color: $blue-light;
    }
  }

  .btn {
    border: none;
  }
}

.input-group img,
.btn-link img {
  vertical-align: middle;
}

input {
  flex: 1;
  padding-right: 0;
  border: 0.0625rem solid $grey-light;
  border-radius: $base-border-radius;
  height: 3rem;
  &:focus {
    box-shadow: none;
  }
  &::placeholder {
    color: $grey-light;
  }
}
.input-group{
  input{
    border-radius: $base-border-radius !important;
  }
  button{
    position: absolute;
    border: 0;
    right: 0;
    top: 50%;
    transform: translateY(-50%);
    z-index: 5;

    &:hover{
      background: none;
    }
    &.clear{
      right: 2rem;
      &:before{
        content: '';
        position: absolute;
        height: 1.5rem;
        width: 1px;
        top:.50rem;
        right: 0;
        background-color: $grey-light;
      }
    }
  }
}

